# snip-36-prover-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  deps-version  snip36
.github/: dependabot.yml
.github/workflows/: build-deps.yml  ci.yml  daily-health.yml  devnet-e2e.yml  rerun-cancelled-e2e.yml
apps/coinflip/: Cargo.toml
apps/coinflip/src/: e2e.rs  e2e_settlement.rs  lib.rs  outcome.rs  routes.rs  selectors.rs  state.rs
apps/counter/: Cargo.toml
apps/counter/src/: e2e.rs  e2e_messages.rs  health.rs  lib.rs  routes.rs  selectors.rs
apps/messages/: Cargo.toml
apps/messages/src/: e2e.rs  lib.rs  selectors.rs
apps/playground/: Cargo.toml
apps/playground/src/: main.rs
crates/snip36-cli/: Cargo.toml  build.rs
crates/snip36-cli/src/: main.rs
crates/snip36-cli/src/commands/: deploy.rs  devnet.rs  doctor.rs  e2e.rs  e2e_coinflip.rs  e2e_devnet.rs  e2e_messages.rs  e2e_settlement.rs  extract.rs  fund.rs  health.rs  mod.rs  prove.rs  setup.rs  submit.rs
crates/snip36-core/: Cargo.toml
crates/snip36-core/examples/: derive_address.rs
crates/snip36-core/src/: cli_util.rs  config.rs  lib.rs  proof.rs  rpc.rs  selectors.rs  signing.rs  types.rs
crates/snip36-server/: Cargo.toml
crates/snip36-server/src/: coinflip_state.rs  lib.rs  main.rs  state.rs
crates/snip36-server/src/routes/: coinflip.rs  counter.rs  deploy.rs  fund.rs  invoke.rs  mod.rs  prove.rs  prove_block.rs  read.rs  submit.rs
extractor/: Cargo.toml
sample-input/: README.md  bootloader_input_template.json  prover_params.json  smoke_task.cairo
scripts/: check-versions.sh  deploy_mainnet_account.py  download-deps.sh  install.sh  run-virtual-os.sh  smoke-test-deps.sh
tests/: README.md  ci-health-check.py  e2e_bank_nonce.sh
tests/contracts/: .tool-versions  Scarb.toml
tests/contracts/src/: lib.cairo
web/: README.md  setup-master.sh
web/backend/: app.py  master_account.py  requirements.txt
web/coinflip/: index.html  package-lock.json  package.json  vite.config.ts
web/coinflip/src/: App.tsx
web/coinflip/src/components/: CoinDisplay.tsx  LogPanel.tsx  WalletButton.tsx
web/coinflip/src/lib/: api.ts
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx
web/frontend/src/components/: CounterDisplay.tsx  Explainer.tsx  LogPanel.tsx  StepCard.tsx
web/frontend/src/lib/: api.ts  starknet.ts
