[workspace]
resolver = "2"
members = [
    "crates/snip36-core",
    "crates/snip36-cli",
    "crates/snip36-server",
    "apps/coinflip",
    "apps/counter",
    "apps/messages",
    "apps/playground",
]
# The extractor crate depends on deps/sequencer/ (cloned by `snip36 setup`).
# It is excluded from the default workspace so `cargo build` works without it.
exclude = ["extractor"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Starknet (only the low-level crates we actually use)
starknet-crypto = "0.8"
starknet-types-core = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.13", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
color-eyre = "0.6"
eyre = "0.6"

# Misc
base64 = "0.22"
dotenvy = "0.15"
rand = "0.9"
hex = "0.4"
