[package]
name = "snip36-messages"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "L2→L1 messages example application for SNIP-36"

[dependencies]
snip36-core = { path = "../../crates/snip36-core", features = ["cli"] }
starknet-types-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
regex-lite = "0.1"
tempfile = "3"
