[package]
name = "snip36-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Unified CLI for SNIP-36 virtual block proving"

[[bin]]
name = "snip36"
path = "src/main.rs"

[dependencies]
snip36-core = { path = "../snip36-core" }
snip36-counter = { path = "../../apps/counter" }
snip36-messages = { path = "../../apps/messages" }
snip36-coinflip = { path = "../../apps/coinflip" }
starknet-types-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
regex-lite = "0.1"
rand = { workspace = true }
tempfile = "3"
