[package]
name = "snip36-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for SNIP-36 virtual block proving — types, config, RPC, signing, proof handling"

[features]
cli = ["dep:regex-lite"]

[dependencies]
starknet-rust-crypto = { workspace = true }
starknet-types-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
regex-lite = { version = "0.1", optional = true }
