[package]
name = "snip36-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Web backend for the SNIP-36 Proving Playground"

[[bin]]
name = "snip36-server"
path = "src/main.rs"

[dependencies]
snip36-core = { path = "../snip36-core" }
starknet-types-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
regex-lite = "0.1"
uuid = { version = "1", features = ["v4"] }
